--- a/index.Rmd
+++ b/index.Rmd
@@ -1,11 +1,12 @@
 ---
-title: "BIOL7263_Portfolio"
+title: "BIOL7263"
 author: "Olivia Pletcher"
 date: "`r Sys.Date()`"
 output: html_document
 ---
+[Assigment1](Assignment1/index.html)
 
-```{r setup, include=FALSE}
+f```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
