--- a/index.Rmd
+++ b/index.Rmd
@@ -4,7 +4,7 @@ author: "Olivia Pletcher"
 date: "`r Sys.Date()`"
 output: html_document
 ---
-[Assigment1](Assignment1/index.html)
+[Assigment1](Assignment1/assignment1.html)
 
 f```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
