--- a/index.Rmd
+++ b/index.Rmd
@@ -7,26 +7,12 @@ output: html_document
 
 
 
-# Header 1
-## Header 2
-### Header 3
-
-
-
-
-
-[My website](https://www.cliffswallow.org)
-
-
-
-       
-
-
-
 |date|Assignment|
 |:-| :--:|
 |Sept 1| [Assignment 1](Assignment1/assignment1.html)|
-|Sept 2| [Assignment 2](Assignment2/Assignment2.html)|
+|Sept 8| [Assignment 2](Assignment2/Assignment2.html)|
+|Sept 15| [Assignment 3]|
+
 
 
 
