--- a/index.Rmd
+++ b/index.Rmd
@@ -4,6 +4,28 @@ author: "Olivia Pletcher"
 date: "`r Sys.Date()`"
 output: html_document
 ---
+# **About Me**
+
+![headshot of me](me.jpg){width=40%})
+
+### **Educational Experiences**
+
+Graduate Career: University of Tulsa
+Molecular Biology Lab TA: 1 Semester
+
+Undergraduate Career: University of Nebraska-Lincoln
+Introduction to Biology Lab II TA: 5 semesters
+
+
+### **Research Interests**
+
+Cliff Swallows, of course
+
+Reproductive Success of Cliff Swallows
+
+[My Website](https://www.cliffswallow.org)
+
+![the subject and site in question](Study site.jpg){width=50%})
 
 
 
