--- a/index.Rmd
+++ b/index.Rmd
@@ -34,6 +34,7 @@ Reproductive Success of Cliff Swallows
 |Sept 1| [Assignment 1](Assignment1/assignment1.html)|
 |Sept 8| [Assignment 2](Assignment2/Assignment2.html)|
 |Sept 15| [Assignment 3](Assignment3/assignment3.html)|
+|Sept 29| [Assignment 4](scripts/Assignment4.html)|
 
 
 
