--- a/index.Rmd
+++ b/index.Rmd
@@ -35,6 +35,10 @@ Reproductive Success of Cliff Swallows
 |Sept 8| [Assignment 2](Assignment2/Assignment2.html)|
 |Sept 15| [Assignment 3](Assignment3/assignment3.html)|
 |Sept 29| [Assignment 4](scripts/Assignment4.html)|
+|Sept 29| [Assignment 5] |
+|Oct 11| [Assignment 6] |
+|Oct 18| [Assignment 7]
+|Oct 27| [Mierow Seminar Assignment](Mierow seminar assignment/Animal Acuity.Rmd)
 
 
 
