--- a/index.Rmd
+++ b/index.Rmd
@@ -37,7 +37,7 @@ Reproductive Success of Cliff Swallows
 |Sept 29| [Assignment 4](Assignment4/Assignment4_fix.html)|
 |Sept 29| [Assignment 5] |
 |Oct 11| [Assignment 6] |
-|Oct 18| [Assignment 7]
+|Oct 18| [Assignment 7](GIS_lesson/Assignment-7.html)|
 |Oct 27| [Mierow Seminar Assignment](Mierow seminar assignment/Animal-Acuity.html)
 
 
