added lesson to website

--- a/index.Rmd
+++ b/index.Rmd
@@ -27,7 +27,7 @@ Reproductive Success of Cliff Swallows
 
 ![the subject and site in question](Study site.jpg){width=50%})
 
-
+[My Lesson](Pletcher Lesson/Spatial-Data-Lesson.html)
 
 |date|Assignment|
 |:-| :--:|
