finished part 2 of lesson

--- a/Pletcher Lesson/Spatial Data Lesson.Rmd
+++ b/Pletcher Lesson/Spatial Data Lesson.Rmd
@@ -119,3 +119,63 @@ From the looks of it, redwood trees seem clustered in a few places, cells seem s
 
 
 **2.Testing for Complete Spatial Randomness (CSR)**
+
+**G function: Distance to the Nearest Event** 
+
+compares an "envelope" of expected random distribution to the observed data (based on nearest neighbor distance)
+
+
+Null hypothesis: Complete Spatial Randomness: 
+
+$$G(r) = 1 - exp (-λπr^2)$$ 
+
+λ = mean number of events per unit area (or intensity, which is important in other tests as well)
+
+We will be using the functions `Gest` and `envelope`
+
+
+```
+r <- seq(0, sqrt(2)/6, by = 0.001)
+
+envjap <- envelope(as(spjpines1, "ppp"), fun=Gest, r=r, nrank=2, nsim=99)
+
+envred <- envelope(as(spred, "ppp"), fun=Gest, r=r, nrank=2, nsim=99)
+
+envcells <- envelope(as(spcells, "ppp"), fun=Gest, r=r, nrank=2, nsim=99)
+```
+This created our theoretical random data for each set of observations
+
+Time to combine it all:
+
+```
+Gresults <- rbind(envjap, envred, envcells) 
+Gresults <- cbind(Gresults, 
+                  y=rep(c("JAPANESE", "REDWOOD", "CELLS"), each=length(r)))
+summary(Gresults)
+
+```
+And the plot:
+
+```
+print(xyplot(obs~theo|y, data=Gresults, type="l", 
+             panel=function(x, y, subscripts)
+             {
+               lpolygon(c(x, rev(x)), 
+                        c(Gresults$lo[subscripts], rev(Gresults$hi[subscripts])),
+                        border="gray", col="gray"
+               )
+               
+               llines(x, y, col="black", lwd=2)
+             }
+))
+
+```
+![G function](Gfunction plot.png)
+
+There are stats that go with these graphs, but
+
+#### Redwoods show *clustered pattern* (values of G *above* the envelopes) ####
+
+#### Cells shows a more *regular pattern* (values of G *below* the envelopes) ####
+
+#### Japanese Pines seem to fit in the null envelope of Complete Spatial Randomness ####
