--- a/index.Rmd
+++ b/index.Rmd
@@ -35,7 +35,7 @@ Reproductive Success of Cliff Swallows
 |Sept 8| [Assignment 2](Assignment2/Assignment2.html)|
 |Sept 15| [Assignment 3](Assignment3/assignment3.html)|
 |Sept 29| [Assignment 4](Assignment4/Assignment4_fix.html)|
-|Sept 29| [Assignment 5] |
+|Sept 29| [Assignment 5](Assignment 5/Assignment 5.Rmd) |
 |Oct 11| [Assignment 6] |
 |Oct 18| [Assignment 7](GIS_lesson/Assignment-7.html)|
 |Oct 27| [Mierow Seminar Assignment](Mierow seminar assignment/Animal-Acuity.html)
