--- a/index.Rmd
+++ b/index.Rmd
@@ -39,7 +39,7 @@ Reproductive Success of Cliff Swallows
 |Oct 11| [Assignment 6] |
 |Oct 18| [Assignment 7](GIS_lesson/Assignment-7.html)|
 |Oct 27| [Mierow Seminar Assignment](Mierow seminar assignment/Animal-Acuity.html)
-
+|Nov 28| [Herrboldt Heatmaps Assignment](Heatmaps/Heatmap-Homework.html)
 
 
 
